# networking-agent

./: .env.example  .gitignore  AUDIT_TRACKER_FABLE5.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_QUESTIONS_FABLE5.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: networking-classifier.md  networking-critic.md  networking-drafter.md  networking-nextmove.md
commands/: network-approve.md  network-check.md  network-classify-here.md  network-coach.md  network-critic-here.md  network-draft-here.md  network-draft.md  network-dry-run.md  network-find-here.md  network-find.md  network-followups.md  network-hello.md  network-import.md  network-jobs.md  network-nextmove-here.md  network-nextmove.md  network-outcome.md  network-providers.md  network-purge.md  network-run.md  network-setup.md  network-status.md  network-timing.md
config/: default.yaml  profile.example.yaml  resume_library.example.yaml  voice.example.md
docs/: ANTI_AI_DETECTION.md  APPLICATION_FEED_INPUT_DESIGN_2026-06-30.md  CHROME_PRODUCER_CONTRACT.md  CLASSIFY_SCORECARD_2026-06-26.md  COSTS.md  COVERAGE_BASELINE_2026-06-26.md  COWORK_CHROME_BRIEF_2026-06-21.md  COWORK_CHROME_PRODUCER_RESPONSE_2026-06-21.md  DEFINITION_OF_DONE.md  DESIGN_DRIFT_v0.2.0.md  FINDER_AUDIT_2026-06-26.md  FLEXIBLE_INPUT_DESIGN_2026-06-21.md  HANDOFF_TO_ENGINEERING_2026-06-21.md  INSTALL_SMOKE_TEST.md  LEAD_SOURCING_RESEARCH_2026-06-21.md  MARKET_GAP_AND_FEATURE_IDEAS_2026-06-21.md  ONBOARDING_DESIGN_2026-07-02.md  RANK_SCORECARD_2026-06-28.md  README.md  ROADMAP.md  TRIAL_AST_SPACEMOBILE_2026-06-13.md  TRIAL_B4_NONAEROSPACE_2026-07-02.md  TRIAL_FINDER_AST_SPACEMOBILE_2026-06-28.md  chrome-capture.example.json
skills/drafter-agent/: SKILL.md
skills/finder-agent/: SKILL.md
skills/hello/: SKILL.md
skills/marketer-agent/: SKILL.md
skills/networking-agent/: SKILL.md
src/: orchestrator.py
src/agents/: achievement_matcher.py  application_feed.py  applications.py  artifact_writer.py  critic.py  dispatch.py  drafter.py  finder.py  guardrails.py  humanizer.py  importer.py  marketer.py  ranker.py  shared.py
src/cli/: __init__.py  network_check.py  network_classify_host.py  network_critic_host.py  network_draft_host.py  network_dry_run.py  network_followups.py  network_import.py  network_jobs_host.py  (+10 more)
tests/: conftest.py  test_achievement_matcher.py  test_apify.py  test_apollo.py  test_application_feed.py  test_applications.py  test_artifact_persona_quality.py  test_artifact_writer.py  test_ask_rotation.py  test_chrome_capture_contract.py  test_classify_host.py  test_classify_scorecard.py  test_cli_stdin_bom.py  test_config.py  test_critic.py  test_critic_calibration.py  test_critic_host.py  test_critic_trace.py  test_db.py  test_discovery_logging.py  test_dispatch.py  test_dispatch_coverage.py  test_dispatch_grounding.py  test_drafter.py  test_drafter_coverage.py  test_drafter_critic.py  test_drafter_quality_code.py  test_e2e_verification.py  test_email_path.py  test_email_toggle.py  test_exit_gate.py  test_finder.py  test_finder_correctness.py  test_finder_scorecard.py  test_finder_signals.py  test_guardrails.py  test_guardrails_hard_check.py  test_hook_quality.py  test_host_draft.py  test_humanizer.py  (+47 more)
(+35 files in other folders)
