[project]
name = "networking-agent"
version = "0.1.0"
description = "Autonomous 3-agent outreach pipeline Claude Code plugin"
requires-python = ">=3.11"
authors = [{name = "Siddardth Pathipaka"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short --cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
