[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "networking-agent"
version = "0.9.5"
description = "Autonomous 3-agent outreach pipeline Claude Code plugin"
requires-python = ">=3.11"
authors = [{name = "Siddardth Pathipaka"}]
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short --cov=src --cov-branch"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
# Ratchet only upward (issue #2). 95 reached at the v0.5.5 close (#7) after the
# coverage push (#21/#25/#23) took the repo to ~96.6% line+branch. Bumped to 96
# at the v0.6.0 close — the Finder discovery/hook/correctness work + trial
# scorecard landed the repo at ~97% combined line+branch. Bumped to 97 at the
# v0.6.5 close (ranking model + scorecard) — committed tree at 97.17%. Bumped to
# 98 at the v0.7.0 close — Hunter pattern coverage + provider audit (#13/#22/#14)
# took the committed tree to 98.14%.
fail_under = 98
show_missing = true

[tool.setuptools.packages.find]
include = ["src*"]
